--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ot-json01",
+  "name": "@nuclino/ot-json01",
   "version": "1.1.0",
   "description": "JSON OT type",
   "main": "lib/index.js",
